# nrfxlib-sys

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENCE.md  README.md  build.rs  wrapper.h
.cargo/: config  config.toml
.github/workflows/: ci.yml
include/: stdbool.h  stddef.h  stdint.h
include/sys/: types.h
src/: lib.rs
