[package]
name = "nrfxlib-sys"
version = "1.5.1-rc1"
authors = [
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"42 Technology Ltd <jonathan.pallant@42technology.com>",
]
edition = "2018"
description = "Rust bindings to the Nordic nRF9160 Socket Library."
readme = "README.md"
license-file = "LICENCE.md"
repository = "https://github.com/42-technology-ltd/nrfxlib-sys"
resolver = "2"
# The nrfxlib folder is quite large, so only include the pieces we need
include = [
	"src/**",
	"include/**",
	"build.rs",
	"wrapper.h",
	"*.md",
	"third_party/nordic/nrfxlib/nrf_modem/lib/cortex-m33/hard-float/**",
	"third_party/nordic/nrfxlib/nrf_modem/include/**",
	"third_party/nordic/nrfxlib/nrf_modem/license.txt",
	"third_party/nordic/nrfxlib/nrf_modem/README.rst",
	"third_party/nordic/nrfxlib/crypto/nrf_cc310_platform/include/**",
	"third_party/nordic/nrfxlib/crypto/nrf_cc310_platform/license.txt",
	"third_party/nordic/nrfxlib/crypto/nrf_cc310_mbedcrypto/include/**",
	"third_party/nordic/nrfxlib/crypto/nrf_cc310_mbedcrypto/license.txt",
	"third_party/nordic/nrfxlib/crypto/nrf_oberon/lib/cortex-m33/hard-float/**",
	"third_party/nordic/nrfxlib/crypto/nrf_oberon/include/**",
	"third_party/nordic/nrfxlib/crypto/nrf_oberon/license.txt",
]

[dependencies]

[build-dependencies]
regex = "1"
bindgen = "0.56"
